// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a single image 1`] = `
<Fragment>
  <div
    data-stylename="image"
  >
    <img
      onClick={[Function]}
      src="foo"
    />
    <div
      data-stylename="others"
    >
      <div
        data-stylename="others-inner"
      />
    </div>
  </div>
</Fragment>
`;

exports[`renders multiple images 1`] = `
<Fragment>
  <div
    data-stylename="image"
  >
    <img
      onClick={[Function]}
      src="bar"
    />
    <div
      data-stylename="others"
    >
      <div
        data-stylename="others-inner"
      >
        <img
          data-stylename="other"
          onClick={[Function]}
          src="baz"
        />
        <img
          data-stylename="other"
          onClick={[Function]}
          src="bonk"
        />
      </div>
    </div>
  </div>
</Fragment>
`;
